public/styles/site/_page-account.scss
.account-page {
    flex-direction: column;

	@media all and (min-width: 660px) {
        flex-direction: row;
	}
}

.mobile-account-nav {
    margin: 0 0 1em;
    width: 100%;

	@media all and (min-width: 660px) {
        display: none;
	}
}

.sidebar.account-nav {
    padding: 0;
    z-index: 10;
}

.sidebar-list {
    margin: 0;

    &--account {
        padding: 0;
    }
}

.account-nav-link {
    align-items: center;
    box-shadow: inset -12px 0px 12px -6px rgba(0, 0, 0, 0.12);
    cursor: pointer;
    display: flex;
    justify-content: space-between;

    &.button { // To override button-specific styling
        border-radius: 0;
        margin: 0;
    }

	&:not(&--admin) {
        &:after {
            content: '→';
            display: block;
            height: 1em;
            opacity: 0;
            transform: translateX(-200%);
            transition: .3s all;
            width: 1em;
        }

        &:hover {
            &:after {
                opacity: 1;
                transform: translateX(0);
            }
        }

        &.account-nav-link--active {
            background: white;
            box-shadow: none;
            color: $button-background-color-1;
        }
    }
}

.account-current-section__title {
    margin-top: 0;
}

.account-event__container {
	border-top: 1px solid #989698;
	padding: 0 0 20px 0;

	&:last-of-type {
		padding: 0;
	}

	.card__content-group {
		display: flex;
		flex-direction: row;
	}
}

.account-inquiries-list {

    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: stretch;

    .inquiry {

        padding: 1rem 0;
        border-bottom: 1px solid $light-gray;
        //text-align: center;

        &:first-child {
            padding-top: 0;
        }

        &:last-child {
            padding-bottom: 0;
            border-bottom: none;
        }

        &__note {
            margin-top: 0.25rem;
            width: 100%;
            max-width: 100%;
        }

        .inquiry-field {

            padding-top: 0.25rem;

            &:first-child {
                padding-top: 0;
            }

            &__label {
                font-weight: bold;
            }
        }
    }
}

